# VC6.0toVS2022

./: README.md  upgrade_vc6_to_vs2022.bat
.github/workflows/: VC6toVS2022.yml
VC6.0马里奥/Backup/: UpgradeLog.htm  mario01.sln
VC6.0马里奥/Backup/Backup/: mario01.sln
VC6.0马里奥/Debu/: mario01.ilk  mario01.res  vc60.idb
VC6.0马里奥/新建文件夹/: CMakeLists.txt  mario01.aps  mario01.cpp  mario01.ncb  mario01.opt  mario01.plg  mario01.rc  mario01.sln
